-- 项目进度跟踪系统 PostgreSQL 建表脚本
--
-- 说明：
-- 1. 本脚本只负责实体结构、基础关系和核心字段约束，不包含触发器和函数。
-- 2. 第一版删除采用硬删除；主从关系通过外键级联删除。
-- 3. 权限控制、状态机、跨表时间区间校验、负责人转交、完成冻结与撤销完成等业务规则统一以 01-requirements-boundary.md 为准，并由应用层 / service 层实现。
-- 4. updated_at、completed_at 等生命周期字段由应用层负责维护。

DROP TABLE IF EXISTS device_usage_log;
DROP TABLE IF EXISTS device;
DROP TABLE IF EXISTS sub_task_progress;
DROP TABLE IF EXISTS sub_task;
DROP TABLE IF EXISTS project_node;
DROP TABLE IF EXISTS project_member;
DROP TABLE IF EXISTS project;
DROP TABLE IF EXISTS sys_user;

CREATE TABLE sys_user
(
    id            BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    username      VARCHAR(50)  NOT NULL,
    password_hash VARCHAR(255) NOT NULL,
    real_name     VARCHAR(50)  NOT NULL,
    system_role   INTEGER      NOT NULL DEFAULT 3,
    email         VARCHAR(100) NOT NULL DEFAULT '',
    phone         VARCHAR(50)  NOT NULL DEFAULT '',
    status        INTEGER      NOT NULL DEFAULT 1,
    created_at    TIMESTAMPTZ  NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at    TIMESTAMPTZ  NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uk_sys_user_username UNIQUE (username),
    CONSTRAINT chk_sys_user_system_role CHECK (system_role IN (1, 2, 3)),
    CONSTRAINT chk_sys_user_status CHECK (status IN (1, 2))
);

COMMENT ON TABLE sys_user IS '系统用户表';
COMMENT ON COLUMN sys_user.username IS '登录用户名';
COMMENT ON COLUMN sys_user.password_hash IS '密码哈希';
COMMENT ON COLUMN sys_user.real_name IS '真实姓名';
COMMENT ON COLUMN sys_user.system_role IS '系统角色：1=管理员，2=项目经理，3=普通员工';
COMMENT ON COLUMN sys_user.email IS '邮箱';
COMMENT ON COLUMN sys_user.phone IS '手机号';
COMMENT ON COLUMN sys_user.status IS '账号状态：1=启用，2=禁用';
COMMENT ON COLUMN sys_user.created_at IS '创建时间';
COMMENT ON COLUMN sys_user.updated_at IS '更新时间';

CREATE INDEX idx_sys_user_system_role ON sys_user (system_role);

CREATE TABLE project
(
    id                 BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name               VARCHAR(100) NOT NULL,
    description        TEXT         NOT NULL DEFAULT '',
    owner_user_id      BIGINT       NOT NULL,
    status             INTEGER      NOT NULL DEFAULT 1,
    planned_start_date DATE         NOT NULL,
    planned_end_date   DATE         NOT NULL,
    completed_at       TIMESTAMPTZ,
    created_by         BIGINT       NOT NULL,
    created_at         TIMESTAMPTZ  NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at         TIMESTAMPTZ  NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_project_owner_user_id FOREIGN KEY (owner_user_id) REFERENCES sys_user (id),
    CONSTRAINT fk_project_created_by FOREIGN KEY (created_by) REFERENCES sys_user (id),
    CONSTRAINT chk_project_status CHECK (status IN (1, 2, 3, 4)),
    CONSTRAINT chk_project_date_order CHECK (planned_start_date <= planned_end_date),
    CONSTRAINT chk_project_completed_at CHECK (
        (status = 3 AND completed_at IS NOT NULL) OR
        (status IN (1, 2, 4) AND completed_at IS NULL)
        )
);

COMMENT ON TABLE project IS '项目表';
COMMENT ON COLUMN project.name IS '项目名称';
COMMENT ON COLUMN project.description IS '项目描述';
COMMENT ON COLUMN project.owner_user_id IS '项目负责人用户ID';
COMMENT ON COLUMN project.status IS '项目状态：1=未开始，2=进行中，3=已完成，4=已延期';
COMMENT ON COLUMN project.planned_start_date IS '项目计划开始日期';
COMMENT ON COLUMN project.planned_end_date IS '项目计划完成日期';
COMMENT ON COLUMN project.completed_at IS '项目完成时间；撤销完成后自动清空';
COMMENT ON COLUMN project.created_by IS '创建人ID';
COMMENT ON COLUMN project.created_at IS '创建时间';
COMMENT ON COLUMN project.updated_at IS '更新时间';

CREATE INDEX idx_project_owner_user_id ON project (owner_user_id);
CREATE INDEX idx_project_status ON project (status);

CREATE TABLE project_member
(
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    project_id BIGINT      NOT NULL,
    user_id    BIGINT      NOT NULL,
    added_by   BIGINT      NOT NULL,
    joined_at  TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uk_project_member_project_user UNIQUE (project_id, user_id),
    CONSTRAINT fk_project_member_project_id FOREIGN KEY (project_id) REFERENCES project (id) ON DELETE CASCADE,
    CONSTRAINT fk_project_member_user_id FOREIGN KEY (user_id) REFERENCES sys_user (id) ON DELETE CASCADE,
    CONSTRAINT fk_project_member_added_by FOREIGN KEY (added_by) REFERENCES sys_user (id)
);

COMMENT ON TABLE project_member IS '项目成员表';
COMMENT ON COLUMN project_member.project_id IS '所属项目ID';
COMMENT ON COLUMN project_member.user_id IS '成员用户ID';
COMMENT ON COLUMN project_member.added_by IS '添加该成员的操作人ID；项目负责人初始成员记录由系统自动写入';
COMMENT ON COLUMN project_member.joined_at IS '加入时间';

CREATE INDEX idx_project_member_user_id ON project_member (user_id);

CREATE TABLE project_node
(
    id                 BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    project_id         BIGINT       NOT NULL,
    name               VARCHAR(100) NOT NULL,
    description        TEXT         NOT NULL DEFAULT '',
    sequence_no        INTEGER      NOT NULL,
    status             INTEGER      NOT NULL DEFAULT 1,
    planned_start_date DATE         NOT NULL,
    planned_end_date   DATE         NOT NULL,
    completed_at       TIMESTAMPTZ,
    created_by         BIGINT       NOT NULL,
    created_at         TIMESTAMPTZ  NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at         TIMESTAMPTZ  NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uk_project_node_sequence UNIQUE (project_id, sequence_no) DEFERRABLE INITIALLY IMMEDIATE,
    CONSTRAINT fk_project_node_project_id FOREIGN KEY (project_id) REFERENCES project (id) ON DELETE CASCADE,
    CONSTRAINT fk_project_node_created_by FOREIGN KEY (created_by) REFERENCES sys_user (id),
    CONSTRAINT chk_project_node_status CHECK (status IN (1, 2, 3, 4)),
    CONSTRAINT chk_project_node_sequence_no CHECK (sequence_no >= 1),
    CONSTRAINT chk_project_node_date_order CHECK (planned_start_date <= planned_end_date),
    CONSTRAINT chk_project_node_completed_at CHECK (
        (status = 3 AND completed_at IS NOT NULL) OR
        (status IN (1, 2, 4) AND completed_at IS NULL)
        )
);

COMMENT ON TABLE project_node IS '项目阶段节点表';
COMMENT ON COLUMN project_node.project_id IS '所属项目ID';
COMMENT ON COLUMN project_node.name IS '阶段节点名称';
COMMENT ON COLUMN project_node.description IS '阶段节点说明';
COMMENT ON COLUMN project_node.sequence_no IS '阶段节点在线性流程中的顺序号';
COMMENT ON COLUMN project_node.status IS '阶段节点状态：1=未开始，2=进行中，3=已完成，4=已延期';
COMMENT ON COLUMN project_node.planned_start_date IS '计划开始日期';
COMMENT ON COLUMN project_node.planned_end_date IS '计划完成日期';
COMMENT ON COLUMN project_node.completed_at IS '阶段节点完成时间；撤销完成后自动清空';
COMMENT ON COLUMN project_node.created_by IS '创建人ID';
COMMENT ON COLUMN project_node.created_at IS '创建时间';
COMMENT ON COLUMN project_node.updated_at IS '更新时间';

CREATE INDEX idx_project_node_project_id ON project_node (project_id);
CREATE INDEX idx_project_node_status ON project_node (status);

CREATE TABLE sub_task
(
    id                  BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    node_id             BIGINT       NOT NULL,
    name                VARCHAR(100) NOT NULL,
    description         TEXT         NOT NULL DEFAULT '',
    responsible_user_id BIGINT       NOT NULL,
    status              INTEGER      NOT NULL DEFAULT 1,
    progress_percent    INTEGER      NOT NULL DEFAULT 0,
    priority            INTEGER      NOT NULL DEFAULT 2,
    planned_start_date  DATE         NOT NULL,
    planned_end_date    DATE         NOT NULL,
    completed_at        TIMESTAMPTZ,
    created_by          BIGINT       NOT NULL,
    created_at          TIMESTAMPTZ  NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at          TIMESTAMPTZ  NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_sub_task_node_id FOREIGN KEY (node_id) REFERENCES project_node (id) ON DELETE CASCADE,
    CONSTRAINT fk_sub_task_responsible_user_id FOREIGN KEY (responsible_user_id) REFERENCES sys_user (id),
    CONSTRAINT fk_sub_task_created_by FOREIGN KEY (created_by) REFERENCES sys_user (id),
    CONSTRAINT chk_sub_task_status CHECK (status IN (1, 2, 3, 4)),
    CONSTRAINT chk_sub_task_progress_percent CHECK (
        progress_percent >= 0 AND progress_percent <= 100 AND progress_percent % 10 = 0
        ),
    CONSTRAINT chk_sub_task_priority CHECK (priority IN (1, 2, 3)),
    CONSTRAINT chk_sub_task_date_order CHECK (planned_start_date <= planned_end_date),
    CONSTRAINT chk_sub_task_completed_at CHECK (
        (status = 3 AND completed_at IS NOT NULL) OR
        (status IN (1, 2, 4) AND completed_at IS NULL)
        ),
    CONSTRAINT chk_sub_task_status_progress_match CHECK (
        (status = 3 AND progress_percent = 100) OR
        (status IN (1, 2, 4) AND progress_percent >= 0 AND progress_percent < 100)
        )
);

COMMENT ON TABLE sub_task IS '子任务表';
COMMENT ON COLUMN sub_task.node_id IS '所属阶段节点ID';
COMMENT ON COLUMN sub_task.name IS '子任务名称';
COMMENT ON COLUMN sub_task.description IS '子任务描述';
COMMENT ON COLUMN sub_task.responsible_user_id IS '责任人用户ID';
COMMENT ON COLUMN sub_task.status IS '子任务状态：1=未开始，2=进行中，3=已完成，4=已延期';
COMMENT ON COLUMN sub_task.progress_percent IS '当前进度百分比；第一版按10%粒度维护';
COMMENT ON COLUMN sub_task.priority IS '优先级：1=低，2=中，3=高';
COMMENT ON COLUMN sub_task.planned_start_date IS '计划开始日期';
COMMENT ON COLUMN sub_task.planned_end_date IS '计划完成日期';
COMMENT ON COLUMN sub_task.completed_at IS '子任务完成时间；撤销完成后自动清空';
COMMENT ON COLUMN sub_task.created_by IS '创建人ID';
COMMENT ON COLUMN sub_task.created_at IS '创建时间';
COMMENT ON COLUMN sub_task.updated_at IS '更新时间';

CREATE INDEX idx_sub_task_node_id ON sub_task (node_id);
CREATE INDEX idx_sub_task_responsible_user_id ON sub_task (responsible_user_id);
CREATE INDEX idx_sub_task_status ON sub_task (status);
CREATE INDEX idx_sub_task_planned_end_date ON sub_task (planned_end_date);

CREATE TABLE sub_task_progress
(
    id               BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    sub_task_id      BIGINT      NOT NULL,
    operator_user_id BIGINT      NOT NULL,
    progress_note    TEXT        NOT NULL DEFAULT '',
    progress_percent INTEGER     NOT NULL,
    status           INTEGER     NOT NULL,
    created_at       TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_sub_task_progress_sub_task_id FOREIGN KEY (sub_task_id) REFERENCES sub_task (id) ON DELETE CASCADE,
    CONSTRAINT fk_sub_task_progress_operator_user_id FOREIGN KEY (operator_user_id) REFERENCES sys_user (id),
    CONSTRAINT chk_sub_task_progress_status CHECK (status IN (1, 2, 3, 4)),
    CONSTRAINT chk_sub_task_progress_percent CHECK (
        progress_percent >= 0 AND progress_percent <= 100 AND progress_percent % 10 = 0
        ),
    CONSTRAINT chk_sub_task_progress_status_progress_match CHECK (
        (status = 3 AND progress_percent = 100) OR
        (status IN (1, 2, 4) AND progress_percent >= 0 AND progress_percent < 100)
        )
);

COMMENT ON TABLE sub_task_progress IS '子任务进度记录表';
COMMENT ON COLUMN sub_task_progress.sub_task_id IS '所属子任务ID';
COMMENT ON COLUMN sub_task_progress.operator_user_id IS '操作人用户ID';
COMMENT ON COLUMN sub_task_progress.progress_note IS '进度说明或备注';
COMMENT ON COLUMN sub_task_progress.progress_percent IS '本次记录的进度百分比；第一版按10%粒度维护';
COMMENT ON COLUMN sub_task_progress.status IS '本次记录对应的子任务状态：1=未开始，2=进行中，3=已完成，4=已延期';
COMMENT ON COLUMN sub_task_progress.created_at IS '创建时间';

CREATE INDEX idx_sub_task_progress_sub_task_id ON sub_task_progress (sub_task_id);
CREATE INDEX idx_sub_task_progress_operator_user_id ON sub_task_progress (operator_user_id);
CREATE INDEX idx_sub_task_progress_created_at ON sub_task_progress (created_at);


CREATE TABLE device
(
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name        VARCHAR(100) NOT NULL,
    description TEXT         NOT NULL DEFAULT '',
    created_at  TIMESTAMPTZ  NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at  TIMESTAMPTZ  NOT NULL DEFAULT CURRENT_TIMESTAMP
);

COMMENT ON TABLE device IS '设备表';
COMMENT ON COLUMN device.name IS '设备名称';
COMMENT ON COLUMN device.description IS '设备说明';
COMMENT ON COLUMN device.created_at IS '创建时间';
COMMENT ON COLUMN device.updated_at IS '更新时间';

CREATE TABLE device_usage_log
(
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    device_id  BIGINT      NOT NULL,
    user_id    BIGINT      NOT NULL,
    purpose    VARCHAR(255) NOT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_device_usage_log_device_id FOREIGN KEY (device_id) REFERENCES device (id) ON DELETE CASCADE,
    CONSTRAINT fk_device_usage_log_user_id FOREIGN KEY (user_id) REFERENCES sys_user (id)
);

COMMENT ON TABLE device_usage_log IS '设备使用记录表';
COMMENT ON COLUMN device_usage_log.device_id IS '设备ID';
COMMENT ON COLUMN device_usage_log.user_id IS '使用人用户ID';
COMMENT ON COLUMN device_usage_log.purpose IS '使用目的/原因';
COMMENT ON COLUMN device_usage_log.created_at IS '创建时间';

CREATE INDEX idx_device_usage_log_device_id ON device_usage_log (device_id);
CREATE INDEX idx_device_usage_log_user_id ON device_usage_log (user_id);
